[gd_scene load_steps=8 format=2]

[ext_resource path="res://FrogEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/frog.png" type="Texture" id=2]
[ext_resource path="res://Assets/frog3.png" type="Texture" id=3]
[ext_resource path="res://Label.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/frog2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 42 )

[node name="FrogEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0209808, -15.8392 )
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( -0.0209808, 15.8392 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -33, 0 )
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Label" parent="." instance=ExtResource( 4 )]
margin_left = -5.0
margin_top = -65.0
margin_right = 35.0
margin_bottom = -19.0
custom_colors/font_color = Color( 0.317647, 0.882353, 0.0901961, 0.831373 )

[node name="TextTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
